syntax = "proto3";

package configure.api.configure.server.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "configure.api.configure.server.v1";
option java_outer_classname = "ServerV1";

import "validate/validate.proto";


message ListServerRequest {
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id"]}];
  optional string keyword = 5;
  optional string name = 6;
  optional bool status = 7;
}

message ListServerReply {
  message Server {
    uint32 id = 1;
    string keyword = 2;
    string name = 3;
    optional string description = 4;
    optional bool status = 5;
    uint32 createdAt = 6;
    uint32 updatedAt = 7;
  }

  uint32 total = 1;
  repeated Server list = 2;
}

message CreateServerRequest {
  string keyword = 1[(validate.rules).string = {min_len: 1}];
  string name = 2[(validate.rules).string = {min_len: 1}];
  optional string description = 3;
  optional bool status = 4;
}

message CreateServerReply {
  uint32 id = 1;
}

message UpdateServerRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  string keyword = 2;
  string name = 3;
  optional bool status = 4;
  optional string description = 5;
}

message UpdateServerReply {
}

message DeleteServerRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}

message DeleteServerReply {
}

